# basie

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  New_schedulecreator.doc  README.md  README.txt  RELEASENOTES.md  package  publish  requirements-test.txt  requirements.txt  run_tests  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_test.yml  ci_tests.yml
basie/: __init__.py  angle_parser.py  backend.py  conftest.py  layout.py  procedures.py  radiotelescopes.py  receiver.py  schedule.py  target.py  templates.py  valid_angles.py  version.py
basie/scanmode/: __init__.py  cross.py  maps.py  onoff.py  scanmode.py
basie/tests/: test_backend.py  test_frame.py  test_installation.py  test_maps.py  test_nodding.py  test_receivers.py  test_rich_validator.py  test_schedule.py  test_subscan.py  test_target.py  test_utils.py  test_valid_angles.py  test_validator.py
basie/user_templates/: configuration.txt  configuration_SR.txt  targets.txt  test_targets.txt
doc/: Makefile  basie.rst  basie.scan.rst  conf.py  index.rst  modules.rst  umldiagram.mdj
doc/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  schedulecreator.doctree  schedulecreator.scan.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  schedulecreator.html  schedulecreator.scan.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/schedulecreator/: __init__.html  angle_parser.html  backend.html  errors.html  frame.html  layout.html  procedures.html  radiotelescopes.html  receiver.html  rich_validator.html  scan.html  schedule.html  target.html  target_parser.html  templates.html  utils.html  valid_angles.html  velocity.html
doc/_build/html/_modules/schedulecreator/scan/: cross.html  maps.html  nodding.html  onoff.html  scanmode.html  subscan.html
doc/_build/html/_sources/: index.txt  modules.txt  schedulecreator.txt
example/: TestSched.bck  TestSched.cfg  TestSched.lis  TestSched.scd  configuration.txt  targets.txt
outputdir/: ORIGTestSched.bck  ORIGTestSched.cfg  ORIGTestSched.lis  ORIGTestSched.scd
scripts/: basie  basie-plot-lis  runbasie  sc-wiz  schedulecreator  targets.txt  targets_from_tle
scripts/pippo/: TestSched.cfg  TestSched.lis
src/: __init__.py  angle_parser.py  backend.py  errors.py  frame.py  layout.py  procedures.py  radiotelescopes.py  receiver.py  rich_validator.py  scan.py  schedule.py  target.py  target_parser.py  templates.py  utils.py  utils.py.old  valid_angles.py  velocity.py
src/configobj/: configobj.py
src/plot/: __init__.py
src/scanmode/: __init__.py  cross.py  maps.py  nodding.py  onoff.py  scanmode.py  skydip.py  subscan.py
src/schemas/: schedule.ini
src/user_templates/: configuration.txt  configuration_SR.txt  targets.txt
test/: test_backend.py  test_frame.py  test_installation.py  test_maps.py  test_nodding.py  test_procedures.py  test_receivers.py  test_rich_validator.py  test_schedule.py  test_subscan.py  test_target.py  test_utils.py  test_valid_angles.py  test_validator.py
